Resolved some bugs
New highscore box not centered, figures in front of buttons and multiple saving highscore

--- a/src/components/button/Button.module.scss
+++ b/src/components/button/Button.module.scss
@@ -29,4 +29,8 @@
   &.secondary {
     background: var(--secondary-button-color);
   }
+
+  &:disabled {
+    background: lightgray;
+  }
 }
