--- a/src/components/gameover/scorepage/ScorePage.module.scss
+++ b/src/components/gameover/scorepage/ScorePage.module.scss
@@ -60,11 +60,11 @@
 }
 
 .TopScoreOverlay {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   background-color: rgba(0, 52, 89, 0.6);
   backdrop-filter: blur(0.3rem);
   z-index: 3;
