--- a/src/components/startscreen/StartScreen.module.scss
+++ b/src/components/startscreen/StartScreen.module.scss
@@ -1,5 +1,5 @@
 .StartScreen {
-  position: absolute;
+  position: fixed;
   left: 0;
   top: 0;
   height: 100%;
@@ -26,6 +26,7 @@
   .Figures {
     position: fixed;
     bottom: 0;
+    z-index: -1;
     width: 100%;
     max-height: 60vh;
     max-width: 65rem;
