--- a/src/components/trial/TrialScreen.module.scss
+++ b/src/components/trial/TrialScreen.module.scss
@@ -1,5 +1,5 @@
 .TrialScreen {
-  position: absolute;
+  position: fixed;
   left: 0;
   top: 0;
   height: 100%;
@@ -14,10 +14,11 @@
   justify-content: center;
 
   .Figures {
-    width: 120%;
-    max-width: 100rem;
     position: fixed;
     bottom: 0;
+    z-index: -1;
+    width: 120%;
+    max-width: 100rem;
   }
 }
 
@@ -26,13 +27,13 @@
 }
 
 .StartScreenHeader {
-    max-width: 50rem;
-    padding: 2% 5%;
+  max-width: 50rem;
+  padding: 2% 5%;
 }
 
 .TrialPromptDescription {
   font-weight: 700;
-  color: #FFFFFF;
+  color: #ffffff;
   font-size: 3.5rem;
   padding: 5rem 7rem;
 }
